# django-hrid

./: README.md  pyproject.toml
django_hrid/: __init__.py  exceptions.py  field.py
tests/: settings.py  test_django_hrid.py
tests/test_app/: models.py
