[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-hrid"
version = "0.1.0"
description = "Human-readable IDs for Django models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Robot Futures", email = "hello@robotfutures.co" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=4.2",
    "hrid>=0.2.4",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-django>=4.5",
]

[project.urls]
Homepage = "https://github.com/robotfutures/django-hrid"
Repository = "https://github.com/robotfutures/django-hrid"

[tool.hatch.build.targets.wheel]
packages = ["django_hrid"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
